# scanner

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  run_scans.sh  spec.md
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: aggregation.rs  analysis.rs  chunk.rs  codemodel.rs  config.rs  entrypoint.rs  lib.rs  mitigations.rs  prioritized.rs  prompt.rs  readme.rs  rule_hints.rs  status.rs
engine/src/adapters/: anthropic.rs  local.rs  openai.rs  retry.rs
schemas/: technique.schema.json
server/: Cargo.toml
server/src/: lib.rs
techniques/: T1001.yaml  T1008.yaml  T1009.yaml  T1201.yaml  T1205.yaml  T1301.yaml  T1308.yaml  T1407.yaml  T1408.yaml  T1911.yaml
