[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
jsonschema = "0.17"
regex = "1.11"
walkdir = "2.5"
async-trait = "0.1"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
glob = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
indoc = "2.0"
